# ThunderSiege6-Chat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: autobuild-CI.yml  blank.yml
cmake/: HunterLibs.cmake
main/: CMakeLists.txt
main/common/: CMakeLists.txt
main/common/include/: dnsresolver.hpp  message.hpp  winnetworkconfig.hpp
main/common/src/: dnsresolver.cpp  message.cpp  winnetworkconfig.cpp
main/exe/: CMakeLists.txt
main/exe/client/: CMakeLists.txt
main/exe/client/src/: main.cpp
main/exe/server/: CMakeLists.txt
main/exe/server/src/: main.cpp
main/libs/: CMakeLists.txt
main/libs/client/: CMakeLists.txt
main/libs/client/include/: ThunderChatClient.hpp
main/libs/client/src/: ThunderChatClient.cpp
main/libs/common/: CMakeLists.txt
main/libs/common/include/: connexion.hpp  dnsresolver.hpp  message.hpp  network.hpp  winnetworkconfig.hpp
main/libs/common/src/: connexion.cpp  dnsresolver.cpp  message.cpp  network.cpp  winnetworkconfig.cpp
main/libs/server/: CMakeLists.txt
main/libs/server/include/: autonetworkselect.hpp  clientdata.hpp  connexion.hpp  thunderchatserver.hpp
main/libs/server/src/: autonetworkselect.cpp  clientdata.cpp  thunderchatserver.cpp
main/myexe/: CMakeLists.txt
main/myexe/src/: main.cpp
main/mylib/: CMakeLists.txt  CMakeLists.txt.txt
main/mylib/include/: ThunderChatClient.hpp
main/mylib/src/: ThunderChatClient.cpp
